objects/SGR_Account_Census__c.object
<CustomObject>
    <fields>
        <fullName>Acc_Census_External_Id__c</fullName>
        <label>Acc Census External Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Renewal_Date__c</fullName>
        <formula>Account__r.Renewal_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Census</relationshipLabel>
        <relationshipName>Account_Censuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Census__c</fullName>
        <formula>IF(Member_Benefit_Cancel_Date__c&gt;Account_Renewal_Date__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Census</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Type_Code__c</fullName>
        <label>Address Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>CS-Custodial</fullName>
                    <isActive>false</isActive>
                    <label>CS-Custodial</label>
                </value>
                <value>
                    <fullName>PR- Primary</fullName>
                    <isActive>false</isActive>
                    <label>PR- Primary</label>
                </value>
                <value>
                    <fullName>SC- Secondary</fullName>
                    <isActive>false</isActive>
                    <label>SC- Secondary</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>(Account__r.Renewal_Date__c - Date_of_Birth__c) /365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alternate_Individual_Key__c</fullName>
        <label>Alternate Individual Key</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bluestar_Account_Id__c</fullName>
        <label>Bluestar Account Id</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_name__c</fullName>
        <label>City name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Composite_Rates__c</fullName>
        <label>Composite Rates</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corporate_Entitity_Code__c</fullName>
        <label>Corporate Entitity Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dental_Plan_ID__c</fullName>
        <label>Dental Plan ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dental_Policy_Tier__c</fullName>
        <label>Dental Policy Tier</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dental_Tier__c</fullName>
        <label>Dental Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EO</fullName>
                </value>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>EF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address_of_the_Member__c</fullName>
        <label>Email Address of the Member</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Status_Code__c</fullName>
        <label>Employee Status Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <label>Group Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Section_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Section Number</label>
        <referenceTo>Group_Section__c</referenceTo>
        <relationshipLabel>Account Censuses</relationshipLabel>
        <relationshipName>Account_Censuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Health_Plan_ID__c</fullName>
        <label>Health Plan ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Policy_Tier__c</fullName>
        <label>Health Policy Tier</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Tier__c</fullName>
        <label>Health Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EO</fullName>
                </value>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>EF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Phone_Number__c</fullName>
        <label>Home Phone Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medicare_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medicare Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Benefit_Cancel_Date__c</fullName>
        <label>Member Benefit Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Benefit_Effective_Date__c</fullName>
        <label>Member Benefit Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Cancel_Date__c</fullName>
        <label>Member Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Characteristic_Type__c</fullName>
        <label>Member Characteristic Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Effective_Date__c</fullName>
        <label>Member Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Key__c</fullName>
        <label>Member Key</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_Rates__c</fullName>
        <label>Member Rates</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Member_SSNK__c</fullName>
        <label>Member SSNK</label>
        <length>29</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Number__c</fullName>
        <label>Membership Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Current_ID__c</fullName>
        <label>Most Current ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <label>Plan Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Code__c</fullName>
        <label>Relationship Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscriber</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Domestic Partner</fullName>
                </value>
                <value>
                    <fullName>SPS</fullName>
                </value>
                <value>
                    <fullName>DEP</fullName>
                </value>
                <value>
                    <fullName>DP</fullName>
                </value>
                <value>
                    <fullName>DIS</fullName>
                </value>
                <value>
                    <fullName>STD</fullName>
                </value>
                <value>
                    <fullName>XSP</fullName>
                </value>
                <value>
                    <fullName>SUB</fullName>
                </value>
                <value>
                    <fullName>CUS</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>SPD</fullName>
                </value>
                <value>
                    <fullName>SPP</fullName>
                </value>
                <value>
                    <fullName>SSP</fullName>
                </value>
                <value>
                    <fullName>XCU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscriber</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Domestic Partner</fullName>
                </value>
                <value>
                    <fullName>Civil Union Spouse</fullName>
                </value>
                <value>
                    <fullName>Class II Dependent</fullName>
                </value>
                <value>
                    <fullName>Dependent Child</fullName>
                </value>
                <value>
                    <fullName>Disabled Dependent</fullName>
                </value>
                <value>
                    <fullName>Sponsored Dependent- Child</fullName>
                </value>
                <value>
                    <fullName>Sponsored Dep-Adult</fullName>
                </value>
                <value>
                    <fullName>Surviving Spouse</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Ex-Civil Union Spouse</fullName>
                </value>
                <value>
                    <fullName>Ex-Spouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retention_Effective_Date__c</fullName>
        <label>Retention Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Row__c</fullName>
        <label>Sub #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Sequence_Number_Text__c</fullName>
        <formula>TEXT( zz__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Sequence Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Number__c</fullName>
        <label>Subscriber ID Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tobacco_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tobacco Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Dental_Subscribers__c</fullName>
        <label>Total Number of Dental Subscribers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Health_Subscribers__c</fullName>
        <label>Total Number of Health Subscribers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URE_Relationship_Code__c</fullName>
        <description>Maps the Relationship Type Code to URE equivalent Value</description>
        <label>URE Relationship Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>OD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Plan_ID__c</fullName>
        <label>Vision Plan ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Policy_Tier__c</fullName>
        <label>Vision Policy Tier</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Tier__c</fullName>
        <label>Vision Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EO</fullName>
                </value>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>EF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZZZ_Field__c</fullName>
        <description>Please dont promote this field, it is created for Test Purposes</description>
        <label>ZZZ Field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zz__c</fullName>
        <label>ZZ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Census</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Census Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Censuses</pluralLabel>
    <recordTypes>
        <fullName>SGR_Account_Census</fullName>
        <active>true</active>
        <label>SGR Account Census</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>